# TrainingDocs

./: .gitignore  PGTraining.session.sql  Terms_Conditions.md
Agentic/: 2.10-simple-type-safety-mistral-basic-alternate-retry.py  2.10-simple-type-safety-mistral-basic.py  2.10-simple-type-safety-openai.py  2.12-dynamic-system-prompts-mistral.py  2.12-dynamic-system-prompts-openai.py  2.14-async-mistral.py  3.4.1-Auto-validation.py  3.5.1-Auto-imporved-validation.py  4.6.1-tools.py  4.7.1-tool-choice-modular.py  4.7.1-tool-choice-modular_better.py  4.7.1-tool-choice.py  7.3.3-JudgePattern.py  8-topological-workflow.py  README.md  calc_tool.py  db_tool.py  db_tool_better.py  mobile_store.db  pyproject.toml
Data/: Useful_Dataset_Locations.md  Useful_links.md
Git/: 01-New_Repo.md  02-Make_History.md  05-View_History.md  (+1 more)
LLMs/: aihw-requirements.txt  cpu-requirements.txt  pyproject.toml
LLMs/Apps/: json-output.py
LLMs/Evaluation/: assets.csv  eval-geval.py  eval_usingdeep.py
LLMs/LangChain/: better_db.py  data.db  data2.db  dyna_toolkit.py  lcel.py  phone_data_db.py  structuredoutput.py  tool_example.py
LLMs/basic-chat-bot/: chatbot.py  chatbot_with_summary.py
LLMs/llm-settings/: ex1.py  ex1_llama.py  ex2.py  ex3.py  requirements.txt
LLMs/tokenization-embeddings/: ch1.py  ch2.py  ex1.py  ex2.py  ex3.py  ex4.py  nonai-requirements.txt  requirements.txt
LLMs/writing-prompts/: Copilot.py  chained_prompt.py  ex1.py  ex1_copilot.py  ex2.py  ex2_copilot.py  ex4.py  ex4_copilot.py  requirements.txt
LLMs/writing-prompts/Using_Copilot/: example-copilot.py  prompt.py
(+589 files in other folders)
