[project]
name = "llms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "langchain-community>=0.4.2",
    "langchain-core>=1.5.0",
    "langchain-openai>=1.4.0",
    "openai>=2.47.0",
    "requests>=2.34.2",
]
